--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     WARRANTY section (for your Perl module)
 
 VERSION
-    version 0.103511
+    version 0.111290
 
 SYNOPSIS
     In weaver.ini, probably near the end:
@@ -11,9 +11,30 @@ SYNOPSIS
         [WarrantyDisclaimer]
 
 OVERVIEW
-    This section plugin will add the standard DISCLAIMER OF WARRANTY section
+    This section plugin will add a standard DISCLAIMER OF WARRANTY section
     to your POD. See the bottom of this module's documentation for the
     content of this section.
+
+    Note that there are several other warranty texts available that
+    correspond to the text used in various open-source licenses, such as
+    Pod::Weaver::Section::WarrantyDisclaimer::GPL2. If your code's license
+    has a specific warranty clause, you should try to use the corresponding
+    module, so that the warranty text in your modules will match that of the
+    license. If a warranty disclaimer module is not provided for your
+    license of choice, you can easily create one by subclassing this class
+    and overriding the methods "warranty_section_title" and "warranty_text".
+    Alternatively, you can simply use "[WarrantyDisclaimer::Custom]" and
+    then use the "title" and "text" options to specify your custom warranty.
+
+METHODS
+  warranty_section_title
+    This method provides the text to be used as the title of the warranty
+    section. It can be overridden by subclasses to provide different
+    warranties.
+
+  warranty_text
+    This method provides the text to be used in the warranty section. It can
+    be overridden by subclasses to provide different warranties.
 
 INSTALLATION
     See perlmodinstall for information and options on installing Perl
